--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Lato";
+    src: url(fonts/lato/Lato-Light.ttf);
+  }
+
 #background {
     width: auto;
     height: 960px;
@@ -38,24 +43,29 @@
     place-items: flex-start flex-start;
     flex-flow: column nowrap;
     border: 2px solid black;
+
 }
 
 #numberContainer {
     width: 350px;
     height: 50px;
-    background: pink;
+    /* background: pink; */
     display: flex;
     place-content: flex-end flex-end;
     flex-flow: row wrap;
+    font-family: "Lato";
+    font-size: xx-large;
 }
 
 #operatorContainer {
     width: 350px;
     height: 50px;
-    background: magenta;
+    /* background: magenta; */
     display: flex;
     place-content: flex-end flex-end;
     flex-flow: row wrap;
+    font-family: "Lato";
+    font-size: xx-large;
 }
 
 
